--- a/src/components/HomePage.css
+++ b/src/components/HomePage.css
@@ -8,7 +8,7 @@
     background-color: darkslategray;
 }
 
-.homePage p {
+.homeLeft {
     flex: 1;
     max-width: 600px;
     font-size: larger;
@@ -16,6 +16,7 @@
     border: 2px solid black;
     padding: 1rem;
     background-color: darkcyan;
+    text-align: center;
 
 }
 
@@ -32,7 +33,7 @@
         flex-direction: column;
         text-align: center
     }
-    .homePage p {
+    .homeLeft {
         font-size: large;
     }
     .homePage img {
@@ -48,7 +49,7 @@
     .homePage {
         padding: 1rem;
     }
-    .homePage p {
+    .homeLeft {
         font-size: medium;
     }
     .homePage img {
